# stomlins-dash

./: .gitignore  Procfile  README  README.md  app.py  astro.config.mjs  head.html  package-lock.json  package.json  practice.ipynb  pyproject.toml  requirements.txt
.astro/: settings.json
.astro/collections/: cv.schema.json  now.schema.json  projects.schema.json
assets/: main-info.txt  s1.css  scripts.js  timeline.csv
docs/: design-seasonal-spirals-2026-04-05.md  design-site-rebuild-2026-03-25.md
public/spirals/: github-commits.html  six-nations.html  skiing.html
scripts/: generate_spirals.py  validate.mjs
src/components/: Education.astro  Experience.astro  Intro.astro  Projects.astro
src/content/: config.ts
src/content/cv/: data.yaml
src/content/now/: data.yaml
src/content/projects/: data.yaml
src/layouts/: Base.astro
src/pages/: index.astro  now.astro  seasonal-spirals.astro
src/styles/: global.css
